Fixed z-index of author bar

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@
 autor {
     position: sticky;
     top: 0;
+    z-index: 10;
 
     display: grid;
     grid-template-areas: "student zadanie";
